<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TGCodeExam"
        app:elevation="3dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:textAlignment="center"
            android:background="?attr/colorPrimary"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/primary_text_dark"
            app:popupTheme="@style/Theme.PopupOverlay"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- SUCCESS State -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAlbums"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:spanCount="2"
                tools:listitem="@layout/item_album"
                tools:itemCount="5"
                />

            <!-- EMPTY State -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerEmptyState"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/acivBgEmpty"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_gravity="center_horizontal"
                        app:srcCompat="@drawable/ic_error"
                        app:tint="@color/primaryBlue"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/actvEmptyStateInfo1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingLeft="42dp"
                        android:paddingRight="42dp"
                        android:layout_marginTop="12dp"
                        android:lineSpacingExtra="6dp"
                        android:textAlignment="gravity"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="20sp"
                        android:text="@string/empty_state_no_results_found"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/actvEmptyStateInfo2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingLeft="42dp"
                        android:paddingRight="42dp"
                        android:layout_marginTop="8dp"
                        android:lineSpacingExtra="6dp"
                        android:textAlignment="gravity"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:text="@string/empty_state_please_try_again"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabScrollToTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_scroll_up"
        app:layout_anchor="@+id/swipeRefresh"
        app:layout_anchorGravity="bottom|right"
        android:visibility="gone"
        tools:visibility="visible"
        tools:ignore="ContentDescription" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>