<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:theme="@style/Theme.AppBarOverlay"
        android:fitsSystemWindows="true"
        app:elevation="3dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:titleEnabled="false"
            app:titleCollapseMode="fade"
            style="@style/Theme.CollapsingToolbar"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/acivBannerImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/secondaryBlue"
                    android:scaleType="center"
                    app:layout_collapseMode="parallax"
                    tools:srcCompat="@drawable/ic_library_music"
                    tools:tint="@color/gray"
                    />

            </FrameLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:popupTheme="@style/Theme.PopupOverlay"
                app:title="@string/album_details_appbar_title"
                style="@style/Theme.Toolbar.UnderCollapsing"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="48dp"
                    android:visibility="visible"
                    >

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupAttributes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        app:chipSpacing="4dp"
                        app:chipSpacingVertical="-8dp"
                        android:theme="@style/Theme.Material3.DayNight"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        >

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipSongCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            app:chipIcon="@drawable/ic_library_music"
                            app:chipIconTint="@color/white"
                            app:chipBackgroundColor="@color/pink_a700"
                            android:visibility="gone"
                            tools:visibility="visible"
                            tools:text="17 Songs"
                            />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipDownloadable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:text="@string/album_attribute_downloadable_label"
                            app:chipIcon="@drawable/ic_download"
                            app:chipIconTint="@color/white"
                            app:chipBackgroundColor="@color/teal_700"
                            android:visibility="gone"
                            tools:visibility="visible"
                            />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipStreamable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            android:text="@string/album_attribute_streamable_label"
                            app:chipIcon="@drawable/ic_stream"
                            app:chipIconTint="@color/white"
                            app:chipBackgroundColor="@color/purple_700"
                            android:visibility="gone"
                            tools:visibility="visible"
                            />

                    </com.google.android.material.chip.ChipGroup>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/actvAlbumTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:textAlignment="gravity"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:ellipsize="end"
                        android:maxLines="5"
                        app:layout_constraintTop_toBottomOf="@+id/chipGroupAttributes"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:text="``Intolerable Cruelty``"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/actvRecordLabel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="16dp"
                        android:gravity="left|center_vertical"
                        android:textAlignment="gravity"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/actvAlbumTitle"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:text="Universal Music Enterprises"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/actvCopyright"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="16dp"
                        android:gravity="left|center_vertical"
                        android:textAlignment="gravity"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:textStyle="italic"
                        android:ellipsize="end"
                        android:maxLines="5"
                        app:layout_constraintTop_toBottomOf="@+id/actvRecordLabel"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:text="2003 Universal Music Enterprises, a Division of UMG Recordings, Inc. This Compilation ? 2003 Universal Music Enterprises, a Division of UMG Recordings, Inc."
                        />

                    <!-- Artists -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/actvArtistsTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="24dp"
                        android:gravity="left|center_vertical"
                        android:textAlignment="gravity"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/actvCopyright"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:text="@string/album_details_artists_label"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvArtists"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:fadingEdge="horizontal"
                        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/actvArtistsTitle"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:listitem="@layout/item_artist"
                        tools:itemCount="5"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/actvReleaseDateTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="24dp"
                        android:gravity="left|center_vertical"
                        android:textAlignment="gravity"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/rvArtists"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:text="@string/album_details_release_date_label"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/actvReleaseDateValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="16dp"
                        android:gravity="left|center_vertical"
                        android:textAlignment="gravity"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:textStyle="italic"
                        android:ellipsize="end"
                        android:maxLines="5"
                        app:layout_constraintTop_toBottomOf="@+id/actvReleaseDateTitle"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:text="October 7, 2003"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- EMPTY State -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/containerEmptyState"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="64dp"
                    android:visibility="gone"
                    tools:visibility="gone"
                    >

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        >

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/acivBgEmpty"
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:layout_gravity="center_horizontal"
                            app:srcCompat="@drawable/ic_error"
                            app:tint="@color/primaryBlue"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/actvEmptyStateInfo1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingLeft="42dp"
                            android:paddingRight="42dp"
                            android:layout_marginTop="12dp"
                            android:lineSpacingExtra="6dp"
                            android:textAlignment="gravity"
                            android:textColor="@android:color/primary_text_light"
                            android:textSize="20sp"
                            android:text="@string/empty_state_no_results_found"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/actvEmptyStateInfo2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingLeft="42dp"
                            android:paddingRight="42dp"
                            android:layout_marginTop="8dp"
                            android:lineSpacingExtra="6dp"
                            android:textAlignment="gravity"
                            android:textColor="@android:color/primary_text_light"
                            android:textSize="16sp"
                            android:text="@string/empty_state_please_try_again"
                            />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>